// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Detail screen renders correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RCTScrollView>
    <View />
  </RCTScrollView>
</View>
`;

exports[`Home screen renders correctly 1`] = `
<RNCSafeAreaView
  style={
    Object {
      "flex": 1,
    }
  }
/>
`;

exports[`Home screen renders correctly 2`] = `
<RNCSafeAreaView
  style={
    Object {
      "flex": 1,
    }
  }
/>
`;
